...
                            }
                        } catch {
                            print("Error saving context: \(error)")
                        }
                    }
                }
            }.accessibilityIdentifier("calorieList")
                .onAppear {
                    totCalCount = allCalorieItems.reduce(0, {
                        $0 + Int($1.calorieCount)
                    })
                }
            .listStyle(PlainListStyle())
...
                                    .resizable()
                                    .frame(width: 15, height: 15)
                                    .foregroundColor(.white)
                            }
                        }
                    }
                    .accessibilityIdentifier("addCalorieItem")
                }

            }.overlay(
                Group {
                    if showAddCalorieItemView {
                        Color.black.opacity(0.4)
...
